<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    
    tools:context=".MainActivity" >
    
    <RelativeLayout
       android:id="@+id/titlebar"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_marginBottom="5dp"
       android:background="#222222"
       >  
       
          <TextView
             android:id="@+id/setting_title"
             android:layout_width="wrap_content"
			 android:layout_height="wrap_content"
			 android:layout_centerHorizontal="true"
			 android:layout_centerVertical="true"
			 android:text="@string/setting"
			 android:textSize="20dp"
			 android:textColor="#FFFFFF"
              />

          <ImageButton
              android:id="@+id/cancel_btn"
              android:layout_width="80dp"
              android:layout_height="30dp"
              android:layout_alignParentLeft="true"
              android:layout_centerVertical="true"
              android:layout_marginLeft="50dp"
              android:background="@drawable/button_bk"
              android:src="@drawable/cancel" 
              />

          <ImageButton
              android:id="@+id/save_btn"
              android:layout_width="80dp"
              android:layout_height="30dp"
              android:layout_alignParentTop="true"
              android:layout_marginLeft="50dp"
              android:layout_toRightOf="@+id/setting_title"
              android:background="@drawable/button_bk"
              android:src="@drawable/save" />

	</RelativeLayout>
	
     <RelativeLayout
       android:id="@+id/content"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:paddingBottom="@dimen/activity_vertical_margin"
   	   android:paddingLeft="@dimen/activity_horizontal_margin"
       android:paddingRight="@dimen/activity_horizontal_margin"
       android:paddingTop="@dimen/activity_vertical_margin"
       android:layout_below="@id/titlebar"
       >  
       <EditText
        	android:id="@+id/user_edit"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:hint="@string/input_mail"
        />
    	<EditText
       		android:id="@+id/password_edit"
        	android:inputType="textPassword"
        	android:layout_width="match_parent"
       		android:layout_height="wrap_content"
        	android:layout_below="@id/user_edit"
        	android:hint="@string/input_password"
        />
    	<EditText
       		 android:id="@+id/host_edit"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_below="@id/password_edit"
        	android:hint="@string/input_host"
        />
        
	</RelativeLayout>
    
    

</RelativeLayout>
